syntax = "proto3";

package common; // 单独的 common 包
option go_package = ".;proto";

// 通用分页参数
message PageRequest {
  uint64 pageNum = 1;  // 页码，从 1 开始
  uint64 pageSize = 2;  // 每页数量
}

message IdRequest{
  uint64 id = 1;
}

message IdsRequest{
  repeated uint64 ids=1;
}

message TimestampResponse{
  int64 createTime =1;
  int64 updateTime =2;
  int64 isDeleted =3;
}

message PageResponse {
  uint64 pageNum = 1;  // 页码，从 1 开始
  uint64 pageSize = 2;  // 每页数量
  uint64 total = 3;
  uint64 totalPage = 4;

}
